# MLProject

./: .gitignore  pyproject.toml
artifacts/: model.pkl  preprocessor.pkl
notebook/: EDA STUDENT PERFORMANCE .ipynb  EDA.ipynb  MODEL TRAINING.ipynb
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
